test connection from Eclipse to Github website through http

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//model/BPMN-Model.ecore=UTF-8
 encoding//model/BPMN-Model.ecorediag=UTF-8
+encoding//model/bpmn.ecore_diagram=UTF-8
+encoding//model/nFRFrameworkModel_1.ecore_diagram=UTF-8
